2007-08-29  Jaap Haitsma,  <jaap@haitsma.org>

	* gnome-search-tool.desktop.in:
	* gsearchtool.h: Use system-search i.s.o. removed gnome-searchtool
	icon. Fixes bug #470196

2007-02-08  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool-callbacks.c: (move_to_trash_cb):
	* gsearchtool-support.c: (make_valid_utf8), (extract_string_until),
	(parse_previous_duplicate_name), (make_next_duplicate_name),
	(get_duplicate_name), (gsearchtool_get_next_duplicate_name):
	* gsearchtool-support.h: Fix bug #404158, do not overwrite files
	in the trash folder.  Use same file renaming logic as nautilus.

2007-01-26  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool-callbacks.c: (move_to_trash_cb): Fix bug #395381,
	cannot delete filenames containing %21 from the search window.

2007-01-26  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool-callbacks.c: (move_to_trash_cb): Fix bug #397945,
	cursor goes away from found files list when deleting a file.

2006-11-19  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool-support.c: fix compiler warning
	* gsearchtool.c: (main): gtk_window_set_policy() is deprecated,
	use gtk_window_set_resizable()

2006-11-04  Dennis Cranston  <dennis_cranston@yahoo.com>

	* help/C/gnome-search-tool.xml: Fix documentation error.

2006-10-08  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool-callbacks.c: (file_key_press_event_cb): 
	Fix bug #360395, numpad enter doesn't work.

2006-09-12  Dennis Cranston <dennis_cranston@yahoo.com>

	* help/C/figures/gnome-search-tool_window.png:  Update.
	
2006-09-09  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool-spinner.[ch]: Update to latest spinner code.
	* gsearchtool.c: (gsearch_app_create): Update for spinner code.

2006-06-15  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool-callbacks.c: (open_file_cb), (open_folder_cb),
	(move_to_trash_cb), (file_button_release_event_cb),
	(drag_begin_file_cb), (drag_file_cb), (key_press_cb):  