@@ -1,3 +1,8 @@
+2007-09-26  Dennis Cranston  <dennis_cranston@yahoo.com>
+
+	* gsearchtool.c: (main): Fix bug #454650, translate messages in 
+	the  --help output.
+
 2007-08-29  Jaap Haitsma,  <jaap@haitsma.org>
 
 	* gnome-search-tool.desktop.in:
